--- a/task-09.html
+++ b/task-09.html
@@ -7,7 +7,11 @@
     <title>Task 9</title>
     <link rel="stylesheet" href="css/common.css" />
     <style>
-      .widget {
+      body {
+        height: 1200px;
+        cursor: pointer;
+      }
+      /* .widget {
         text-align: center;
       }
 
@@ -25,16 +29,16 @@
         padding: 8px 12px;
         font-size: 20px;
         cursor: pointer;
-      }
+      } */
     </style>
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
 
-    <div class="widget">
+    <!-- <div class="widget">
       <p>Background color: <span class="color">-</span></p>
       <button type="button" class="change-color">Change color</button>
-    </div>
+    </div> -->
 
     <script src="js/task-09.js" type="module"></script>
   </body>
